# openmp_test_clion

./: CMakeLists.txt  README.md  basic_hello.cpp  parallel_for.cpp  work_sharing.cpp
